# backend_ConectaTEA

./: .env  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/routes/: usuario.py
app/core/config/: config.py
app/core/db/: database.py
app/models/: usuario_model.py
